--- a/DQN/DQN_lunar_lander_v1_test.ipynb
+++ b/DQN/DQN_lunar_lander_v1_test.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,8 @@
     "            truncated = False\n",
     "            total_reward = 0\n",
     "            \n",
-    "            while not any([terminated, truncated]):\n",
+    "            frame = 0\n",
+    "            while not terminated or truncated:\n",
     "                rate = self.get_exploration_rate(episode=e, epsilon=self.epsilon)\n",
     "                action = self.get_action(state, rate)\n",
     "                new_state, reward, terminated, truncated, _ = env.step(action)\n",
@@ -219,9 +220,12 @@
     "                total_reward +=reward\n",
     "                # update old state for new step\n",
     "                state = new_state\n",
-    "                # replay memory to train DQN model\n",
-    "                loss = self.replay() \n",
-    "             \n",
+    "\n",
+    "                loss = self.replay() # replay memory to train DQN model\n",
+    "                frame += 1\n",
+    "                # episode end if it takes too many steps\n",
+    "                if frame>300:\n",
+    "                    terminated = True\n",
     "                    \n",
     "            print(f\" EPISODE {e}|{EPISODES} reward {total_reward} | loss: {loss}\", end=\"\\r\")\n",
     "            # print(f\" EPISODE {e}|{EPISODES} reward {total_reward} | replay time {replay_end-replay_start:.3f}\")\n",
@@ -246,15 +250,16 @@
     "        while not any([terminated, truncated]):\n",
     "            # action = self.get_action(state, exploration_rate=-1)\n",
     "            action = torch.argmax(self.trainer.predict(state, no_grad=True)).item()\n",
-    "            state, reward, terminated, truncated, _ = env.step(action)\n",
+    "            state, reward, terminated, truncated, done= env.step(action)\n",
     "            total_reward +=reward\n",
     "            frame += 1\n",
-    "        print(\"REWARD\", total_reward, \"FRAMES\", frame)\n"
+    "            print(truncated, done, end=\"\\r\")\n",
+    "        print(\"REWARD\", total_reward, \"FRAMES\", frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.model.load_state_dict(torch.load(\"model\\model_1697367125.pt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,40 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(terminated, (bool, np.bool8)):\n",
-      "C:\\Users\\pritom52251.WHILDC\\AppData\\Local\\Temp\\ipykernel_3508\\2463292646.py:32: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:264.)\n",
-      "  batch_state = torch.tensor(batch_state)\n",
-      "C:\\Users\\pritom52251.WHILDC\\AppData\\Local\\Temp\\ipykernel_3508\\907626582.py:11: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  state = torch.tensor(state).to(device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPISODE 100|500 25.46367777847064 | Loss 0.189291417598724377598724375\n",
-      "EPISODE 200|500 30.814522744956648 | Loss 0.1174509674310684274310684252\n",
-      "EPISODE 300|500 141.4289901627149 | Loss 0.16357988119125366119125366274\n",
-      "EPISODE 400|500 159.26497776300877 | Loss 0.1094679012894630412894630436\n",
-      "EPISODE 500|500 -4.860452563662648 | Loss 0.206113636493682866493682862\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "history = agent.train(500)"
+    "# history = agent.train(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,38 +322,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "REWARD 206.68715125913081 FRAMES 399\n",
-      "REWARD 178.70227580420524 FRAMES 393\n",
-      "REWARD 206.0228718949015 FRAMES 151\n",
-      "REWARD 8.180533362208351 FRAMES 97\n",
-      "REWARD 6.025640761706569 FRAMES 125\n",
-      "REWARD 220.4215549189044 FRAMES 396\n",
-      "REWARD -5.0548222159583105 FRAMES 78\n",
-      "REWARD -9.172961255737832 FRAMES 74\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32md:\\Experiments\\ML_playground\\DRL\\DQN\\DQN_lunar_lander.ipynb Cell 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     agent\u001b[39m.\u001b[39;49mplay()\n",
-      "\u001b[1;32md:\\Experiments\\ML_playground\\DRL\\DQN\\DQN_lunar_lander.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=130'>131</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m terminated \u001b[39mor\u001b[39;00m truncated:\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=131'>132</a>\u001b[0m     \u001b[39m# action = self.get_action(state, exploration_rate=-1)\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=132'>133</a>\u001b[0m     action \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrainer\u001b[39m.\u001b[39mpredict(state, no_grad\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m))\u001b[39m.\u001b[39mitem()\n\u001b[1;32m--> <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=133'>134</a>\u001b[0m     state, reward, terminated, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=134'>135</a>\u001b[0m     total_reward \u001b[39m+\u001b[39m\u001b[39m=\u001b[39mreward\n\u001b[0;32m    <a href='vscode-notebook-cell:/d%3A/Experiments/ML_playground/DRL/DQN/DQN_lunar_lander.ipynb#X13sZmlsZQ%3D%3D?line=135'>136</a>\u001b[0m     frame \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\wrappers\\time_limit.py:50\u001b[0m, in \u001b[0;36mTimeLimit.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action):\n\u001b[0;32m     40\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Steps through the environment and if the number of steps elapsed exceeds ``max_episode_steps`` then truncate.\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \n\u001b[0;32m     42\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     48\u001b[0m \n\u001b[0;32m     49\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m     observation, reward, terminated, truncated, info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m     51\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     53\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_max_episode_steps:\n",
-      "File \u001b[1;32mc:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\wrappers\\order_enforcing.py:37\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_reset:\n\u001b[0;32m     36\u001b[0m     \u001b[39mraise\u001b[39;00m ResetNeeded(\u001b[39m\"\u001b[39m\u001b[39mCannot call env.step() before calling env.reset()\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 37\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32mc:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\wrappers\\env_checker.py:39\u001b[0m, in \u001b[0;36mPassiveEnvChecker.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[39mreturn\u001b[39;00m env_step_passive_checker(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv, action)\n\u001b[0;32m     38\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 39\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32mc:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\envs\\box2d\\lunar_lander.py:599\u001b[0m, in \u001b[0;36mLunarLander.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    596\u001b[0m     reward \u001b[39m=\u001b[39m \u001b[39m+\u001b[39m\u001b[39m100\u001b[39m\n\u001b[0;32m    598\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhuman\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 599\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrender()\n\u001b[0;32m    600\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray(state, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mfloat32), reward, terminated, \u001b[39mFalse\u001b[39;00m, {}\n",
-      "File \u001b[1;32mc:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\envs\\box2d\\lunar_lander.py:702\u001b[0m, in \u001b[0;36mLunarLander.render\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    700\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscreen\u001b[39m.\u001b[39mblit(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msurf, (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m))\n\u001b[0;32m    701\u001b[0m     pygame\u001b[39m.\u001b[39mevent\u001b[39m.\u001b[39mpump()\n\u001b[1;32m--> 702\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mclock\u001b[39m.\u001b[39;49mtick(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmetadata[\u001b[39m\"\u001b[39;49m\u001b[39mrender_fps\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m    703\u001b[0m     pygame\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mflip()\n\u001b[0;32m    704\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrender_mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mrgb_array\u001b[39m\u001b[39m\"\u001b[39m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "REWARD -2.6919602666185654 FRAMES 101\n",
+      "REWARD -26.995206037823934 FRAMES 99\n",
+      "REWARD -51.73556445042842 FRAMES 1000\n",
+      "REWARD -30.512366451728592 FRAMES 1000\n",
+      "REWARD 125.88705507623968 FRAMES 1000\n",
+      "REWARD -68.82165634958362 FRAMES 1000\n",
+      "REWARD 220.5102234112607 FRAMES 210\n",
+      "REWARD -29.5662018097576 FRAMES 97\n",
+      "REWARD -40.058694747844854 FRAMES 80\n",
+      "REWARD -47.578003516713295 FRAMES 97\n"
      ]
     }
    ],
@@ -363,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,18 +492,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.save(agent.trainer.model.state_dict(), f\"model/model_{int(time.time())}.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([False, False])"
    ]
   },
   {
