--- a/DQN/DQN_lunar_lander_v1_test.ipynb
+++ b/DQN/DQN_lunar_lander_v1_test.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,18 +274,18 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer.model.load_state_dict(torch.load(\"model\\model_1697367125.pt\"))"
+    "trainer.model.load_state_dict(torch.load(\"model\\model_1697612346.pt\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "history = agent.train(300)"
+    "# history = agent.train(300)"
    ]
   },
   {
@@ -344,19 +344,27 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pritom52251.WHILDC\\AppData\\Local\\miniconda3\\envs\\RLml\\lib\\site-packages\\gym\\utils\\passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "REWARD -164.91754767868827 FRAMES 129\n",
-      "REWARD -0.16707052314316684 FRAMES 91\n",
-      "REWARD 216.93287536627582 FRAMES 376\n",
-      "REWARD 31.771877713227326 FRAMES 98\n",
-      "REWARD 243.20580973410748 FRAMES 241\n",
-      "REWARD -28.774001964350006 FRAMES 66\n",
-      "REWARD 243.78860781947128 FRAMES 926\n",
-      "REWARD 60.701845565711324 FRAMES 134\n",
-      "REWARD -25.942198552027662 FRAMES 103\n",
-      "REWARD -11.15454975351625 FRAMES 120\n"
+      "REWARD -105.46904215059371 FRAMES 399\n",
+      "REWARD -26.942336433379666 FRAMES 190\n",
+      "REWARD -271.03432573498327 FRAMES 829\n",
+      "REWARD 205.34327234813912 FRAMES 860\n",
+      "REWARD 272.0390828988344 FRAMES 182\n",
+      "REWARD 128.65700653388805 FRAMES 1000\n",
+      "REWARD 274.71471929416043 FRAMES 245\n",
+      "REWARD -30.938665991821217 FRAMES 1000\n",
+      "REWARD 106.8844706205261 FRAMES 1000\n",
+      "REWARD 82.63479939570215 FRAMES 1000\n"
      ]
     }
    ],
